update for this html file

--- a/webProgramming.html
+++ b/webProgramming.html
@@ -8,12 +8,10 @@
 
 <body>
     <h1>Testing for this site</h1>
-    
+    <h2>Another test for this site</h2>
     <button id="sucess">sucess</button>
     <button id="warning">warning</button>
     <button id="error">error</button>
-
-
 </body>
 
 </html>
